--- a/swingtime/templates/swingtime/recurring_form_part.html
+++ b/swingtime/templates/swingtime/recurring_form_part.html
@@ -1,91 +1,111 @@
-        <tr><th>{{ recurrence_form.day.label_tag}}</th>
-            <td>{{ recurrence_form.day }}</td></tr>
-        <tr><th>{{ recurrence_form.start_time_delta.label_tag }}</th>
-            <td>{{ recurrence_form.start_time_delta }}</td></tr>
-        <tr><th>{{ recurrence_form.end_time_delta.label_tag }}</th>
-            <td>{{ recurrence_form.end_time_delta }}</td></tr>
+<tr>
+    <th>{{ recurrence_form.day.label_tag }}</th>
+    <td>{{ recurrence_form.day }}</td>
+</tr>
+<tr>
+    <th>{{ recurrence_form.start_time_delta.label_tag }}</th>
+    <td>{{ recurrence_form.start_time_delta }}</td>
+</tr>
+<tr>
+    <th>{{ recurrence_form.end_time_delta.label_tag }}</th>
+    <td>{{ recurrence_form.end_time_delta }}</td>
+</tr>
 
-        <tr><th>{{ recurrence_form.repeats.label_tag }}</th>
-            <td>
-                {{ recurrence_form.count.errors }}
+<tr>
+    <th>{{ recurrence_form.repeats.label_tag }}</th>
+    <td>
+        {{ recurrence_form.count.errors }}
+        <ul>
+            <li>
+                <label for="id_repeats_0">
+                    <input checked="checked" type="radio" id="id_repeats_0"
+                           value="count" name="repeats"/> A total of
+                </label>
+                {{ recurrence_form.count }} time(s)
+            </li>
+            <li>
+                <label for="id_repeats_1">
+                    <input type="radio" id="id_repeats_1" value="until"
+                           name="repeats"/> Until
+                </label>
+                {{ recurrence_form.until }}</li>
+        </ul>
+    </td>
+</tr>
+
+<tr>
+    <th>{{ recurrence_form.freq.label_tag }}</th>
+    <td>
+        {{ recurrence_form.interval.errors }}
+        <div>
+            Every {{ recurrence_form.interval }}
+        </div>
+        <div class="border">
+            <label for="id_freq_0"
+                   class="border inline-block p-2 px-4"
+            >
+                <input type="radio" id="id_freq_0"
+                       onclick="showTab('#rec-wrapper', '#rec-days')"
+                       value="3" name="freq"/> Day(s)
+            </label>
+
+            <label for="id_freq_1" class="inline-block border p-2 px-4">
+                <input checked="checked" type="radio" id="id_freq_1"
+                       onclick="showTab('#rec-wrapper', '#rec-weeks')"
+                       value="2" name="freq"/> Week(s)
+            </label>
+
+            <label for="id_freq_2" class="inline-block border p-2 px-4">
+                <input type="radio" id="id_freq_2"
+                       onclick="showTab('#rec-wrapper', '#rec-months')"
+                       value="1" name="freq"/> Month(s)
+            </label>
+            <label for="id_freq_3" class="inline-block border p-2 px-4">
+                <input type="radio" id="id_freq_3"
+                       onclick="showTab('#rec-wrapper', '#rec-years')"
+                       value="0" name="freq"/> Year(s)
+            </label>
+        </div>
+
+        <div id="rec-wrapper">
+            <div id="rec-weeks" class="tab hidden">
+                {{ recurrence_form.week_days }}
+            </div>
+
+            <div id="rec-months" class="tab hidden">
                 <ul>
-                    <li><label for="id_repeats_0">
-                        <input checked="checked" type="radio" id="id_repeats_0" 
-                            value="count" name="repeats" /> A total of</label>
-                        {{ recurrence_form.count }} time(s)</li>
-                    <li><label for="id_repeats_1">
-                        <input type="radio" id="id_repeats_1" value="until" 
-                            name="repeats" /> Until </label>
-                        {{ recurrence_form.until }}</li>
-                </ul></td></tr>
-
-        <tr><th>{{ recurrence_form.freq.label_tag }}</th>
-            <td>
-                {{ recurrence_form.interval.errors }}
-                <div style="float: left">Every {{ recurrence_form.interval }} </div>
-                <ul id="recurrence-options">
-                    <li><label for="id_freq_0">
-                        <input type="radio" id="id_freq_0" 
-                            value="3" name="freq" /> Day(s)</label>
+                    <li>
+                        <label for="id_month_option_0">
+                            <input type="radio" id="id_month_option_0"
+                                   value="on" name="month_option"/>
+                            On the</label>
+                        {{ recurrence_form.month_ordinal }}
+                        {{ recurrence_form.month_ordinal_day }}
                     </li>
                     <li>
-                        <label for="id_freq_1">
-                            <input checked="checked" type="radio" id="id_freq_1" 
-                                value="2" name="freq" /> Week(s):</label>
+                        <label for="id_month_option_1">
+                            <input checked="checked" type="radio"
+                                   id="id_month_option_1" value="each"
+                                   name="month_option"/> Each:</label>
+                        <br clear="all"/>
                         <div class="horizontal form-indent">
-                            {{ recurrence_form.week_days }}
-                        </div>
-                        <br clear="all" />
-                    </li>
-                    <li>
-                        <label for="id_freq_2">
-                            <input type="radio" id="id_freq_2" 
-                                value="1" name="freq" /> Month(s)</label>
-                        <div class="form-indent">
-                            <ul>
-                                <li>
-                                    <label for="id_month_option_0">
-                                        <input type="radio" id="id_month_option_0" 
-                                            value="on" name="month_option" /> 
-                                        On the</label>
-                                    {{ recurrence_form.month_ordinal }}
-                                    {{ recurrence_form.month_ordinal_day }}
-                                </li>
-                                <li>
-                                    <label for="id_month_option_1">
-                                        <input checked="checked" type="radio" 
-                                            id="id_month_option_1" value="each" 
-                                            name="month_option" /> Each:</label>
-                                    <br clear="all" />
-                                    <div class="horizontal form-indent">
-                                        {{ recurrence_form.each_month_day }}
-                                    </div>
-                                    <br clear="all" />
-                                </li>
-                            </ul>
-                        </div>
-                    </li>
-                    <li>
-                        <label for="id_freq_3">
-                            <input type="radio" id="id_freq_3" 
-                                value="0" name="freq" /> Year(s)</label>
-                        <div class="form-indent">
-                            <div class="horizontal">
-                                {{ recurrence_form.year_months}} 
-                            </div>
-                            <br clear="all" />
-                            <div class="form-indent">
-                            <label for="id_is_year_month_ordinal">
-                                {{ recurrence_form.is_year_month_ordinal }} 
-                                On the </label>
-                            
-                            {{ recurrence_form.year_month_ordinal }}
-                            {{ recurrence_form.year_month_ordinal_day }}
-                            </div>
+                            {{ recurrence_form.each_month_day }}
                         </div>
                     </li>
                 </ul>
-            </td>
-        </tr>
+            </div>
+
+            <div id="rec-years" class="tab hidden ">
+                {{ recurrence_form.year_months }}
+                <label for="id_is_year_month_ordinal">
+                    {{ recurrence_form.is_year_month_ordinal }}
+                    On the
+                </label>
+                {{ recurrence_form.year_month_ordinal }}
+                {{ recurrence_form.year_month_ordinal_day }}
+            </div>
+        </div>
+    </td>
+</tr>
 
 
