pass Event Group ID everywhere

--- a/demo/templates/intro.html
+++ b/demo/templates/intro.html
@@ -21,7 +21,7 @@
     </p>
     
     <p class="center">
-        Quick start: View today's calendar and <a href="{% url 'swingtime-today' %}">
+        Quick start: View today's calendar and <a href="{% url 'swingtime-today' group.id %}">
             add a new event by clicking a time slot &raquo;</a>
     </p>
 
