--- a/swingtime/templates/swingtime/monthly_view.html
+++ b/swingtime/templates/swingtime/monthly_view.html
@@ -7,12 +7,15 @@
     <h3>Monthly View</h3>
     <p><em>Click a calendar date below to add a new event</em></p>
     <h4>
-        <a class="plain" href="{% url 'swingtime-monthly-view' last_month.year last_month.month %}"
+        <a class="plain"
+           href="{% url 'swingtime-monthly-view' group.id last_month.year last_month.month %}"
            title="Last Month">&larr;</a>
         {{ this_month|date:"F" }}
-        <a title="View {{ this_month.year }}" href="{% url 'swingtime-yearly-view' this_month.year %}">
+        <a title="View {{ this_month.year }}"
+           href="{% url 'swingtime-yearly-view' group.id this_month.year %}">
             {{ this_month|date:"Y" }}</a>
-        <a class="plain" href="{% url 'swingtime-monthly-view' next_month.year next_month.month %}"
+        <a class="plain"
+           href="{% url 'swingtime-monthly-view' group.id next_month.year next_month.month %}"
            title="Next Month">&rarr;</a>
     </h4>
     <table class="w-full text-center">
@@ -24,20 +27,21 @@
         </tr>
         </thead>
         <tbody>
-        {% for row in calendar %}
+        {% for row in calendar_data %}
             <tr class="h-10">
                 {% for day,items in row %}
                     <td class="border {% if day == today.day %}today{% endif %}">
                         {% if day %}
                             <div class="day-ordinal">
-                                <a href="{% url 'swingtime-daily-view' calendar.id this_month.year this_month.month day %}">{{ day }}</a>
+                                <a href="{% url 'swingtime-daily-view' group.id this_month.year this_month.month day %}">{{ day }}</a>
                             </div>
                             {% if items %}
                                 <ul>{% for item in items %}
                                     <li>
                                         <a href="{{ item.get_absolute_url }}">
                                             <span class="event-times">{{ item.start_time|time }}</span>
-                                            {{ item.title }}</a>
+                                            {{ item.title }}
+                                        </a>
                                     </li>{% endfor %}
                                 </ul>
                             {% endif %}
