--- a/swingtime/templates/swingtime/event_detail.html
+++ b/swingtime/templates/swingtime/event_detail.html
@@ -1,24 +1,25 @@
 {% extends "base.html" %}
 {% block title %}Event: {{ event }}{% endblock %}
 {% block content %}
-    <h3>Swingtime Event</h3>
     <h4>Event Details</h4>
     <form action="" method="post">{% csrf_token %}
         {% include "swingtime/event_form_part.html" %}
     </form>
 
-    <h4>Notes</h4>
-    {% with event.notes.all as notes %}
-        {% if notes %}
-            <ul>
-                {% for note in notes %}
-                    <li>{{ note }}</li>
-                {% endfor %}
-            </ul>
-        {% else %}
-            <p>None</p>
-        {% endif %}
-    {% endwith %}
+    {% comment %}
+        <h4>Notes</h4>
+        {% with event.notes.all as notes %}
+            {% if notes %}
+                <ul>
+                    {% for note in notes %}
+                        <li>{{ note }}</li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>None</p>
+            {% endif %}
+        {% endwith %}
+    {% endcomment %}
 
     <h4>Occurrences</h4>
     {% if event.occurrence_set.count %}
@@ -37,7 +38,6 @@
                 </li>
             {% endfor %}
         </ol>
-    {% else %}
     {% endif %}
 
     <h4>Add Occurrences</h4>
@@ -45,13 +45,14 @@
         <table>
             <tfoot>
             <tr>
-                <td colspan="2"><input type="submit" name="_add" value="Add"/></td>
+                <td colspan="2">
+                    <input type="submit" name="_add" value="Add" class="swing-button"/>
+                </td>
             </tr>
             </tfoot>
             <tbody>
             {% include "swingtime/recurring_form_part.html" %}
             </tbody>
         </table>
-    </form>
     </form>
 {% endblock %}
