--- a/swingtime/templates/swingtime/recurring_form_part.html
+++ b/swingtime/templates/swingtime/recurring_form_part.html
@@ -40,34 +40,34 @@
         <div>
             Every {{ recurrence_form.interval }}
         </div>
-        <div class="border">
+        <div id="rec-tabs" class="border">
             <label for="id_freq_0"
                    class="border inline-block p-2 px-4"
             >
                 <input type="radio" id="id_freq_0"
-                       onclick="showTab('#rec-wrapper', '#rec-days')"
+                       onclick="showTab(null)"
                        value="3" name="freq"/> Day(s)
             </label>
 
             <label for="id_freq_1" class="inline-block border p-2 px-4">
                 <input checked="checked" type="radio" id="id_freq_1"
-                       onclick="showTab('#rec-wrapper', '#rec-weeks')"
+                       onclick="showTab('#rec-weeks')"
                        value="2" name="freq"/> Week(s)
             </label>
 
             <label for="id_freq_2" class="inline-block border p-2 px-4">
                 <input type="radio" id="id_freq_2"
-                       onclick="showTab('#rec-wrapper', '#rec-months')"
+                       onclick="showTab('#rec-months')"
                        value="1" name="freq"/> Month(s)
             </label>
             <label for="id_freq_3" class="inline-block border p-2 px-4">
                 <input type="radio" id="id_freq_3"
-                       onclick="showTab('#rec-wrapper', '#rec-years')"
+                       onclick="showTab('#rec-years')"
                        value="0" name="freq"/> Year(s)
             </label>
         </div>
 
-        <div id="rec-wrapper">
+        <div id="rec-tabs-content"> {# ID used in add_event.html #}
             <div id="rec-weeks" class="tab hidden">
                 {{ recurrence_form.week_days }}
             </div>
