--- a/swingtime/templates/swingtime/add_event.html
+++ b/swingtime/templates/swingtime/add_event.html
@@ -1,27 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Add Event{% endblock %}
-{% block head %}
-    {{ block.super }}
-    <script>
-        let tabsItems = "#rec-tabs";
-        let tabsContent = '#rec-tabs-content';
 
-        function showTab(showNode) {
-            document.querySelectorAll(tabsContent + ' .tab').forEach((node) => node.classList.add('hidden'));
-            if (showNode) {
-                document.querySelector(tabsContent + ' ' + showNode).classList.remove('hidden');
-            }
-        }
-
-        window.addEventListener('load', function () {
-            // trigger showTab click event
-            document.querySelector(tabsItems + ' input:checked').click();
-        })
-
-    </script>
-{% endblock head %}
 {% block content %}
-    <h3 class="center block text-xl">Add Event</h3>
+    <h3 class="text-center text-xl">Add Event</h3>
 
     {{ event_form.non_field_errors }}
     {{ recurring_form.non_field_errors }}
@@ -36,10 +17,7 @@
             {% include "swingtime/recurring_form_part.html" %}
         </table>
 
-        <input class="border p-4 inline-block m-4 bg-blue-200 rounded"
-               type="submit"
-               value="Submit"
-        />
+        <input class="swing-button swing-button-primary" type="submit" value="Submit"/>
     </form>
 
 {% endblock %}
