--- a/swingtime/templates/swingtime/daily_view.html
+++ b/swingtime/templates/swingtime/daily_view.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Daily View{% endblock %}
 {% block content %}
-    <div>Click a time from the Time column to add a new event...</div>
+    <h3 class="swing-title">Daily View</h3>
+
     <div class="nav p-2">
         <a class="swing-button"
            href="{% url 'swingtime-daily-view' group.id prev_day.year prev_day.month prev_day.day %}">
-            &larr;</a>
+            &larr; {{ prev_day|date:"d.m.Y" }}
+        </a>
         <div class="border inline-block rounded px-2">
             <form action="." method="post">
                 {% csrf_token %}
@@ -15,7 +17,9 @@
 
         </div>
         <a class="swing-button"
-           href="{% url 'swingtime-daily-view' group.id next_day.year next_day.month next_day.day %}">&rarr;</a>
+           href="{% url 'swingtime-daily-view' group.id next_day.year next_day.month next_day.day %}">
+            {{ next_day|date:"d.m.Y" }} &rarr;
+        </a>
     </div>
 
     <table class="w-full">
@@ -27,7 +31,7 @@
         </thead>
         <tbody>
         {% for tm,cells in timeslots %}
-            <tr class="border">
+            <tr class="even:bg-gray-100">
                 <th class="center">
                     <a href="{% url 'swingtime-add-event' group.id %}?dtstart={{ tm|date:"Y-m-d\TH:i" }}">
                         {{ tm|date:"h:i a" }}
