--- a/swingtime/templates/swingtime/event_detail.html
+++ b/swingtime/templates/swingtime/event_detail.html
@@ -2,13 +2,16 @@
 {% block title %}Event: {{ event }}{% endblock %}
 {% block content %}
 
-    <a
-            class="font-bold p-4"
-            href="{% url 'swingtime-monthly-view' group.id today.year today.month %}">
-        Back to Calendar
-    </a>
+    <h3 class="swing-title">Event Details</h3>
 
-    <h3 class="text-center">Event Details</h3>
+    <div class="py-4">
+
+        <a class="swing-button"
+           href="{% url 'swingtime-monthly-view' group.id today.year today.month %}">
+            &larr; Back to Calendar
+        </a>
+    </div>
+
     <form action="." method="post">
         {% csrf_token %}
         <table>
@@ -34,12 +37,13 @@
         {% endif %}
     {% endwith %}
 
-    <h4 class="font-bold">Occurrences</h4>
-    <div class="max-h-56 overflow-y-scroll">
+    <h3 class="swing-title">Current Occurrences</h3>
+
+    <div class="max-h-56 overflow-y-scroll border">
         {% if event.occurrence_set.count %}
             <table class="table-auto w-full">
                 <thead>
-                <tr class="font-bold">
+                <tr class="font-bold swing-accent">
                     <td>Detail</td>
                     <td>Weekday</td>
                     <td>Date</td>
@@ -47,7 +51,7 @@
                 </tr>
                 </thead>
                 {% for o in event.occurrence_set.all %}
-                    <tr>
+                    <tr class="even:bg-gray-100">
                         <td class="font-bold">
                             <a href="{% url 'swingtime-occurrence' group.id event.id o.id %}">
                                 See Detail
@@ -72,16 +76,15 @@
         {% endif %}
     </div>
 
-    <h4 class="py-4 font-bold">Add Occurrences</h4>
-    <div class="border rounded p-2">
-
+    <h4 class="swing-title pt-8">Add Occurrences</h4>
+    <div class="border rounded p-2 bg-gray-50">
         <form action="." method="post">
             {% csrf_token %}
             <table>
                 <tfoot>
                 <tr>
                     <td colspan="2">
-                        <input type="submit" name="_add" value="Add"
+                        <input type="submit" name="_add" value="Add Occurrences"
                                class="swing-button swing-button-primary"/>
                     </td>
                 </tr>
