--- a/swingtime/templates/swingtime/monthly_view.html
+++ b/swingtime/templates/swingtime/monthly_view.html
@@ -4,27 +4,27 @@
 {% endblock %}
 
 {% block content %}
-    <h3 class="text-center font-bold">Monthly View</h3>
-    <a
-            class="swing-button"
-            href="{% url 'swingtime-monthly-view' group.id last_month.year last_month.month %}"
-            title="Previous Month">&larr;</a>
+    <h3 class="swing-title">Monthly View</h3>
+
+    <a class="swing-button"
+       href="{% url 'swingtime-monthly-view' group.id last_month.year last_month.month %}"
+       title="Previous Month">&larr; {{ last_month|date:"m/Y" }}</a>
 
     <div class="inline-block px-2 rounded">
         <form action="." method="post">
             {% csrf_token %}
-            <input type="date" name="date" value="{{ today|date:"Y-m-d" }}"/>
+            <input type="date" name="date" value="{{ this_month|date:"Y-m-d" }}"/>
             <input type="submit" name="_goto" value="Go to" class="swing-button"/>
         </form>
     </div>
 
-    <a
-            class="swing-button"
-            href="{% url 'swingtime-monthly-view' group.id next_month.year next_month.month %}"
-            title="Next Month">&rarr;</a>
+    <a class="swing-button"
+       href="{% url 'swingtime-monthly-view' group.id next_month.year next_month.month %}"
+       title="Next Month">{{ next_month|date:"m/Y" }} &rarr;</a>
+
     <table class="w-full text-center">
         <thead>
-        <tr class="bg-gray-100">
+        <tr class="swing-accent">
             {% for week_day in week_days %}
                 <th style="width: 14.3%">{{ week_day }}</th>
             {% endfor %}
@@ -32,7 +32,7 @@
         </thead>
         <tbody>
         {% for row in calendar_data %}
-            <tr class="h-10">
+            <tr class="h-20">
                 {% for day,items in row %}
                     <td class="border {% if day == today.day %}today{% endif %}">
                         {% if day %}
@@ -42,7 +42,8 @@
                             {% if items %}
                                 <ul>{% for item in items %}
                                     <li>
-                                        <a href="{{ item.get_absolute_url }}">
+                                        <a href="{{ item.get_absolute_url }}"
+                                           class="block border p-1 m-1 bg-gray-100 rounded hover:bg-gray-200">
                                             <span class="event-times">{{ item.start_time|time }}</span>
                                             {{ item.title }}
                                         </a>
