--- a/swingtime/templates/swingtime/occurrence_detail.html
+++ b/swingtime/templates/swingtime/occurrence_detail.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Event Occurrence{% endblock %}
 {% block content %}
-    <h3 class="text-center">
+    <h3 class="swing-title">
         Event Occurrence
     </h3>
 
     <div class="block font-bold">
         <a href="{{ occurrence.event.get_absolute_url }}"
-           class="font-bold py-4 inline-block"
+           class="swing-button"
         >
             Event: "{{ occurrence.title }}"
         </a>
@@ -15,7 +15,7 @@
 
     {% with occurrence.start_time as st %}
         <a
-                class="font-bold py-4 inline-block"
+                class="swing-button my-2"
                 href="{% url 'swingtime-daily-view' group.id st.year st.month st.day %}">
             Occurrence: {{ st|date:"l, F jS P" }}
         </a>
