--- a/swingtime/templates/swingtime/monthly_view.html
+++ b/swingtime/templates/swingtime/monthly_view.html
@@ -4,23 +4,29 @@
 {% endblock %}
 
 {% block content %}
-    <h3 class="swing-title">Monthly View</h3>
 
-    <a class="swing-button"
-       href="{% url 'swingtime-monthly-view' group.id last_month.year last_month.month %}"
-       title="Previous Month">&larr; {{ last_month|date:"m/Y" }}</a>
+    <div class="text-center">
 
-    <div class="inline-block px-2 rounded">
-        <form action="." method="post">
-            {% csrf_token %}
-            <input type="date" name="date" value="{{ this_month|date:"Y-m-d" }}"/>
-            <input type="submit" name="_goto" value="Go to" class="swing-button"/>
-        </form>
+        {% include "swingtime/include/menu_scope.html" %}
+
+        <a class="swing-button"
+           href="{% url 'swingtime-monthly-view' group.id last_month.year last_month.month %}"
+           title="Previous Month">&larr; {{ last_month|date:"m/Y" }}</a>
+
+        <div class="inline-block px-2 rounded">
+            <form action="." method="post">
+                {% csrf_token %}
+                <input type="date" name="date" value="{{ this_month|date:"Y-m-d" }}"/>
+                <input type="submit" name="_goto" value="Go to" class="swing-button"/>
+            </form>
+        </div>
+
+        <a class="swing-button"
+           href="{% url 'swingtime-monthly-view' group.id next_month.year next_month.month %}"
+           title="Next Month">{{ next_month|date:"m/Y" }} &rarr;</a>
     </div>
 
-    <a class="swing-button"
-       href="{% url 'swingtime-monthly-view' group.id next_month.year next_month.month %}"
-       title="Next Month">{{ next_month|date:"m/Y" }} &rarr;</a>
+    {# {% include "swingtime/include/cal_grid.html" %}  #}
 
     <table class="w-full text-center">
         <thead>
