--- a/swingtime/templates/swingtime/yearly_view.html
+++ b/swingtime/templates/swingtime/yearly_view.html
@@ -2,28 +2,28 @@
 {% block title %}Yearly View {{ year }}{% endblock %}
 {% block content %}
 
-    <h3 class="text-center font-bold">Yearly View</h3>
+    <div class="text-center">
 
-    <a
-            class="swing-button"
-            href="{% url 'swingtime-yearly-view' group.id last_year %}"
-            title="Previous Year">&larr;
-    </a>
+        {% include "swingtime/include/menu_scope.html" %}
 
-    <div class="inline-block px-2 rounded">
-        <form action="." method="post">
-            {% csrf_token %}
-            <input type="date" name="date" value="{{ today|date:"Y-m-d" }}"/>
-            <input type="submit" name="_goto" value="Go to" class="swing-button"/>
-        </form>
+        <a class="swing-button"
+           href="{% url 'swingtime-yearly-view' group.id last_year %}"
+           title="Previous Year">&larr;
+        </a>
+
+        <div class="inline-block px-2 rounded">
+            <form action="." method="post">
+                {% csrf_token %}
+                <input type="date" name="date" value="{{ today|date:"Y-m-d" }}"/>
+                <input type="submit" name="_goto" value="Go to" class="swing-button"/>
+            </form>
+        </div>
+
+        <a class="swing-button"
+           href="{% url 'swingtime-yearly-view' group.id next_year %}"
+           title="Next Year">&rarr;
+        </a>
     </div>
-
-    <a
-            class="swing-button"
-            href="{% url 'swingtime-yearly-view' group.id next_year %}"
-            title="Next Year">&rarr;
-    </a>
-
 
     {% if by_month %}
         <table class="table-auto w-full">
@@ -46,13 +46,14 @@
                     </th>
                     {% for o in occurrences %}
                         <td>
-                            <a
-                                    class="block font-bold"
-                                    href="{{ o.get_absolute_url }}">{{ o.title }}</a>
+                            <a class="block font-bold"
+                               href="{{ o.get_absolute_url }}">{{ o.title }}</a>
                         </td>
                         <td>
                             <a href="{% url 'swingtime-daily-view' group.id o.start_time.year o.start_time.month o.start_time.day %}">
-                                {{ o.start_time|date:"l, M jS" }}</a></td>
+                                {{ o.start_time|date:"l, M jS" }}
+                            </a>
+                        </td>
                         <td>{{ o.start_time|date:"P" }}</td>
                         <td>{{ o.end_time|date:"P" }}</td>
                         </tr>
